--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <article class="article-aboutme">
                     <h2>About Me</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus voluptate velit fuga quae consectetur labore id voluptatem possimus illo deleniti. A culpa laboriosam saepe, reprehenderit quos quidem nisi modi expedita.</p>
-                </article>
+                </article><!--article-aboutme-->
                 <article class="article-moreaboutme">
                     <h2>More About Me</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat obcaecati laborum error dignissimos sunt illum odit optio sapiente assumenda similique, debitis, culpa qui minus libero dolor quam earum vero?</p>
-                </article>
+                </article><!--article-moreaboutme-->
                 <article class="article-shouldlisten">
                     <h2>Should Listen</h2>
                     <figure>
@@ -52,21 +52,21 @@
                         <figcaption>
                             <p>Mac Miller</p>
                         </figcaption>
-                    </figure>
+                    </figure><!--figure--->
                     <figure>
                         <img src="img/eminem.jpg" alt="Eminem" width="150" height="150">
                         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FxQTY-W6GIo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                         <figcaption>
                             <p>Eminem</p>
                         </figcaption>
-                    </figure>
+                    </figure><!--figure-->
                     <figure>
                         <img src="img/dre.jpg" alt="dr dre" width="150" height="150">
                         <figcaption>
                             <p>Dr. Dre</p>
                         </figcaption>
-                    </figure>
-                </article>
+                    </figure><!--figure-->
+                </article><!--article-shouldlisten-->
                 <article class="article-shouldwatch">
                     <h2>Should Watch</h2>
                     <figure>
@@ -86,8 +86,8 @@
                         <figcaption>
                             <p>The Punisher</p>
                         </figcaption>
-                    </figure>
-                </article>
+                    </figure><!--figure-->
+                </article><!--article-shouldwatch-->
                 <article class="article-socialmedia">
                     <h2>My Social Media</h2>
                     <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
