--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <figcaption>
                             <p>Braking Bad</p>
                         </figcaption>
-                    </figure>
+                    </figure><!--figure-->
                     <figure>
                         <img src="img/punisher.jpg" alt="The Punisher" width="150" height="150">
                         <figcaption>
@@ -94,7 +94,7 @@
                     <a href=""><img src="img/instagram.png" alt="Instagram"></a>
                     <a href=""><img src="img/twitter.png" alt="twitter"></a>
 
-                </article>
+                </article><!--article-socialmedia-->
             </main>
         </section>
     </div>
