añadir ids, para el menu de navegacion

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </figure>
             <!--aboutme-->
             <nav class="nav-principal">
-                <a class="link-aboutme" href="">About Me</a>
-                <a class="link-moreaboutme" href="">More About Me</a>
-                <a class="link-shouldlisten" href="">Should Listen</a>
-                <a class="link-shouldwatch" href="">Should Watch</a>
-                <a class="link-socialmedia" href="">My Social Media</a>
+                <a id="link-aboutme" class="link-aboutme" href="#aboutme">About Me</a>
+                <a id="link-moreaboutme" class="link-moreaboutme" href="#moreaboutme">More About Me</a>
+                <a id="link-shouldlisten" class="link-shouldlisten" href="#shouldlisten">Should Listen</a>
+                <a id="link-shouldwatch" class="link-shouldwatch" href="#shouldwatch">Should Watch</a>
+                <a id="link-socialmedia" class="link-socialmedia" href="#socialmedia">My Social Media</a>
             </nav>
 
         </section>
@@ -36,15 +36,15 @@
 
         <section class="section-about">
             <main>
-                <article class="article-aboutme">
+                <article id="aboutme" class="article-aboutme">
                     <h2>About Me</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus voluptate velit fuga quae consectetur labore id voluptatem possimus illo deleniti. A culpa laboriosam saepe, reprehenderit quos quidem nisi modi expedita.</p>
                 </article><!--article-aboutme-->
-                <article class="article-moreaboutme">
+                <article id="moreaboutme" class="article-moreaboutme">
                     <h2>More About Me</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat obcaecati laborum error dignissimos sunt illum odit optio sapiente assumenda similique, debitis, culpa qui minus libero dolor quam earum vero?</p>
                 </article><!--article-moreaboutme-->
-                <article class="article-shouldlisten">
+                <article id="shouldlisten" class="article-shouldlisten">
                     <h2>Should Listen</h2>
                     <figure>
                         <img src="img/macmiller.jpg" alt="Mac miller" width="150" height="150">
@@ -67,7 +67,7 @@
                         </figcaption>
                     </figure><!--figure-->
                 </article><!--article-shouldlisten-->
-                <article class="article-shouldwatch">
+                <article id="shouldwatch" class="article-shouldwatch">
                     <h2>Should Watch</h2>
                     <figure>
                         <img src="img/got.jpeg" alt="Game of thrones" width="150" height="150">
@@ -88,7 +88,7 @@
                         </figcaption>
                     </figure><!--figure-->
                 </article><!--article-shouldwatch-->
-                <article class="article-socialmedia">
+                <article id="socialmedia" class="article-socialmedia">
                     <h2>My Social Media</h2>
                     <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
                     <a href=""><img src="img/instagram.png" alt="Instagram"></a>
