Correccion de css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>App1</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    
 </head>
 
 <body>
@@ -20,17 +22,16 @@
                 <figcaption class="name">
                     <h1>Hi, <span class="span-name">I'm Santiago</span></h1>
                 </figcaption>
+                <nav class="nav-principal">
+                    <a id="link-aboutme" class="link-aboutme" href="#aboutme">About Me</a>
+                    <a id="link-moreaboutme" class="link-moreaboutme" href="#moreaboutme">More About Me</a>
+                    <a id="link-shouldlisten" class="link-shouldlisten" href="#shouldlisten">Should Listen</a>
+                    <a id="link-shouldwatch" class="link-shouldwatch" href="#shouldwatch">Should Watch</a>
+                    <a id="link-socialmedia" class="link-socialmedia" href="#socialmedia">My Social Media</a>
+                </nav>
 
             </figure>
             <!--aboutme-->
-            <nav class="nav-principal">
-                <a id="link-aboutme" class="link-aboutme" href="#aboutme">About Me</a>
-                <a id="link-moreaboutme" class="link-moreaboutme" href="#moreaboutme">More About Me</a>
-                <a id="link-shouldlisten" class="link-shouldlisten" href="#shouldlisten">Should Listen</a>
-                <a id="link-shouldwatch" class="link-shouldwatch" href="#shouldwatch">Should Watch</a>
-                <a id="link-socialmedia" class="link-socialmedia" href="#socialmedia">My Social Media</a>
-            </nav>
-
         </section>
         <!--section-iam -->
 
