--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>App1</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    
+
 </head>
 
 <body>
@@ -22,12 +23,12 @@
                 <figcaption class="name">
                     <h1>Hi, <span class="span-name">I'm Santiago</span></h1>
                 </figcaption>
-                <nav class="nav-principal">
-                    <a id="link-aboutme" class="link-aboutme" href="#aboutme">About Me</a>
-                    <a id="link-moreaboutme" class="link-moreaboutme" href="#moreaboutme">More About Me</a>
-                    <a id="link-shouldlisten" class="link-shouldlisten" href="#shouldlisten">Should Listen</a>
-                    <a id="link-shouldwatch" class="link-shouldwatch" href="#shouldwatch">Should Watch</a>
-                    <a id="link-socialmedia" class="link-socialmedia" href="#socialmedia">My Social Media</a>
+                <nav class="nav-principal" id="menu-links">
+                    <a id="link-aboutme" class="link-item active" href="#aboutme">About Me</a>
+                    <a id="link-moreaboutme" class="link-item" href="#moreaboutme">More About Me</a>
+                    <a id="link-shouldlisten" class="link-item" href="#shouldlisten">Should Listen</a>
+                    <a id="link-shouldwatch" class="link-item" href="#shouldwatch">Should Watch</a>
+                    <a id="link-socialmedia" class="link-item" href="#socialmedia">My Social Media</a>
                 </nav>
 
             </figure>
@@ -36,69 +37,86 @@
         <!--section-iam -->
 
         <section class="section-about">
-            <main>
-                <article id="aboutme" class="article-aboutme">
-                    <h2>About Me</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus voluptate velit fuga quae consectetur labore id voluptatem possimus illo deleniti. A culpa laboriosam saepe, reprehenderit quos quidem nisi modi expedita.</p>
-                </article><!--article-aboutme-->
-                <article id="moreaboutme" class="article-moreaboutme">
-                    <h2>More About Me</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat obcaecati laborum error dignissimos sunt illum odit optio sapiente assumenda similique, debitis, culpa qui minus libero dolor quam earum vero?</p>
-                </article><!--article-moreaboutme-->
-                <article id="shouldlisten" class="article-shouldlisten">
-                    <h2>Should Listen</h2>
-                    <figure>
-                        <img src="img/macmiller.jpg" alt="Mac miller" width="150" height="150">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/LR3GQfryp9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                        <figcaption>
-                            <p>Mac Miller</p>
-                        </figcaption>
-                    </figure><!--figure--->
-                    <figure>
-                        <img src="img/eminem.jpg" alt="Eminem" width="150" height="150">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FxQTY-W6GIo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                        <figcaption>
-                            <p>Eminem</p>
-                        </figcaption>
-                    </figure><!--figure-->
-                    <figure>
-                        <img src="img/dre.jpg" alt="dr dre" width="150" height="150">
-                        <figcaption>
-                            <p>Dr. Dre</p>
-                        </figcaption>
-                    </figure><!--figure-->
-                </article><!--article-shouldlisten-->
-                <article id="shouldwatch" class="article-shouldwatch">
-                    <h2>Should Watch</h2>
-                    <figure>
-                        <img src="img/got.jpeg" alt="Game of thrones" width="150" height="150">
-                        <figcaption>
-                            <p>Game of Thrones</p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="img/breakingbad.jpg" alt="Breaking bad" width="150" height="150">
-                        <figcaption>
-                            <p>Braking Bad</p>
-                        </figcaption>
-                    </figure><!--figure-->
-                    <figure>
-                        <img src="img/punisher.jpg" alt="The Punisher" width="150" height="150">
-                        <figcaption>
-                            <p>The Punisher</p>
-                        </figcaption>
-                    </figure><!--figure-->
-                </article><!--article-shouldwatch-->
-                <article id="socialmedia" class="article-socialmedia">
-                    <h2>My Social Media</h2>
-                    <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                    <a href=""><img src="img/instagram.png" alt="Instagram"></a>
-                    <a href=""><img src="img/twitter.png" alt="twitter"></a>
-
-                </article><!--article-socialmedia-->
+            <main class="main-container">
+                <article id="aboutme" class="article-aboutme panel active">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus voluptate velit fuga quae
+                        consectetur labore id voluptatem possimus illo deleniti. A culpa laboriosam saepe, reprehenderit
+                        quos quidem nisi modi expedita.</p>
+                </article>
+                <!--article-aboutme-->
+                <article id="moreaboutme" class="article-moreaboutme panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat obcaecati laborum error
+                        dignissimos sunt illum odit optio sapiente assumenda similique, debitis, culpa qui minus libero
+                        dolor quam earum vero?</p>
+                </article>
+                <!--article-moreaboutme-->
+                <article id="shouldlisten" class="article-shouldlisten panel">
+                    <div class="container-shouldlisten">
+                        <figure>
+                            <img class="img-sections" src="img/macmiller.jpg" alt="Mac miller" width="200" height="200">
+                            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/LR3GQfryp9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                            <figcaption>
+                                <h3>Mac Miller</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure--->
+                        <figure>
+                            <img class="img-sections" src="img/eminem.jpg" alt="Eminem" width="200" height="200">
+                            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FxQTY-W6GIo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                            <figcaption>
+                                <h3>Eminem</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure>
+                            <img class="img-sections" src="img/dre.jpg" alt="dr dre" width="200" height="200">
+                            <figcaption>
+                                <h3>Dr. Dree</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                    </div>
+                </article>
+                <!--article-shouldlisten-->
+                <article id="shouldwatch" class="article-shouldwatch panel">
+                    <div class="container-shouldwatch">
+                        <figure>
+                            <img class="img-sections" src="img/got.jpeg" alt="Game of thrones" width="200" height="200">
+                            <figcaption>
+                                <h3>Game of Thrones</h3>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img class="img-sections" src="img/breakingbad.jpg" alt="Breaking bad" width="200" height="200">
+                            <figcaption>
+                                <h3>Breaking Bad</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure>
+                            <img class="img-sections" src="img/punisher.jpg" alt="The Punisher" width="200" height="200">
+                            <figcaption>
+                                <h3>The Punisher</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                    </div>
+                </article>
+                <!--article-shouldwatch-->
+                <article id="socialmedia" class="article-socialmedia panel">
+                    <div class="container-socialmedia">
+                        <a href=""><img class="link-socialmedia" src="img/facebook.png" alt="Facebook"></a>
+                        <a href=""><img class="link-socialmedia" src="img/instagram.png" alt="Instagram"></a>
+                        <a href=""><img class="link-socialmedia" src="img/gorjeo.png" alt="twitter"></a>
+                        <a href=""><img class="link-socialmedia" src="img/youtube.png" alt="twitter"></a>
+                        <a href=""><img class="link-socialmedia" src="img/pinterest.png" alt="twitter"></a>
+                    </div>
+                </article>
+                <!--article-socialmedia-->
             </main>
         </section>
     </div>
+    <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
