añadimos animaciones y transformaciones
animación de la entrada de cada uno de los articles de la section about.
transformaciones a las imagenes e iconos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!--article-moreaboutme-->
                 <article id="shouldlisten" class="article-shouldlisten panel">
                     <div class="container-shouldlisten">
-                        <figure>
+                        <figure class="figure-img">
                             <img class="img-sections" src="img/macmiller.jpg" alt="Mac miller" width="200" height="200">
                             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/LR3GQfryp9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                             <figcaption>
@@ -60,7 +60,7 @@
                             </figcaption>
                         </figure>
                         <!--figure--->
-                        <figure>
+                        <figure class="figure-img">
                             <img class="img-sections" src="img/eminem.jpg" alt="Eminem" width="200" height="200">
                             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FxQTY-W6GIo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                             <figcaption>
@@ -68,7 +68,7 @@
                             </figcaption>
                         </figure>
                         <!--figure-->
-                        <figure>
+                        <figure class="figure-img">
                             <img class="img-sections" src="img/dre.jpg" alt="dr dre" width="200" height="200">
                             <figcaption>
                                 <h3>Dr. Dree</h3>
@@ -80,23 +80,51 @@
                 <!--article-shouldlisten-->
                 <article id="shouldwatch" class="article-shouldwatch panel">
                     <div class="container-shouldwatch">
-                        <figure>
-                            <img class="img-sections" src="img/got.jpeg" alt="Game of thrones" width="200" height="200">
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/got.jpeg" alt="Game of thrones" width="180" height="180">
                             <figcaption>
                                 <h3>Game of Thrones</h3>
                             </figcaption>
                         </figure>
-                        <figure>
-                            <img class="img-sections" src="img/breakingbad.jpg" alt="Breaking bad" width="200" height="200">
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/breakingbad.jpg" alt="Breaking bad" width="180" height="180">
                             <figcaption>
                                 <h3>Breaking Bad</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
-                        <figure>
-                            <img class="img-sections" src="img/punisher.jpg" alt="The Punisher" width="200" height="200">
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/punisher.jpg" alt="The Punisher" width="180" height="180">
                             <figcaption>
                                 <h3>The Punisher</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/vikings.jpg" alt="The Punisher" width="180" height="180">
+                            <figcaption>
+                                <h3>Vikings</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/sherlock.jpg" alt="The Punisher" width="180" height="180">
+                            <figcaption>
+                                <h3>Sherlock Holmes</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/daredevil.jpg" alt="The Punisher" width="180" height="180">
+                            <figcaption>
+                                <h3>DareDevil</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/robot.jpg" alt="The Punisher" width="180" height="180">
+                            <figcaption>
+                                <h3>Mr. Robot</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
