añadir direcciones a los enlaces
direcciones de las redes sociales de Santiago Rios Diaz

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                 <!--article-shouldwatch-->
                 <article id="socialmedia" class="article-socialmedia panel">
                     <div class="container-socialmedia">
-                        <a href=""><img class="link-socialmedia" src="img/facebook.png" alt="Facebook"></a>
-                        <a href=""><img class="link-socialmedia" src="img/instagram.png" alt="Instagram"></a>
-                        <a href=""><img class="link-socialmedia" src="img/gorjeo.png" alt="twitter"></a>
-                        <a href=""><img class="link-socialmedia" src="img/youtube.png" alt="twitter"></a>
-                        <a href=""><img class="link-socialmedia" src="img/pinterest.png" alt="twitter"></a>
+                        <a href="https://www.facebook.com/SantiiRDiaz" target="_blank"><img class="link-socialmedia" src="img/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/santi_rios.js/?hl=es-la" target="_blank"><img class="link-socialmedia" src="img/instagram.png" alt="Instagram"></a>
+                        <a href="https://twitter.com/SantiRDiaz" target="_blank"><img class="link-socialmedia" src="img/gorjeo.png" alt="twitter"></a>
+                        <a href="https://www.youtube.com/channel/UCoxnKdRPBQkIlXXbgxCRIVQ?view_as=subscriber" target="_blank"><img class="link-socialmedia" src="img/youtube.png" alt="twitter"></a>
+                        <a href="https://co.pinterest.com/santiagordlds/" target="_blank"><img class="link-socialmedia" src="img/pinterest.png" alt="twitter"></a>
                     </div>
                 </article>
                 <!--article-socialmedia-->
