Agregar Artistas y series

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!--article-moreaboutme-->
                 <article id="shouldlisten" class="article-shouldlisten panel">
                     <div class="container-shouldlisten">
-                        <figure class="figure-img">
+                        <figure class="figure-img artist">
                             <img class="img-sections" src="img/macmiller.jpg" alt="Mac miller" width="200" height="200">
                             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/LR3GQfryp9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                             <figcaption>
@@ -60,7 +60,7 @@
                             </figcaption>
                         </figure>
                         <!--figure--->
-                        <figure class="figure-img">
+                        <figure class="figure-img artist">
                             <img class="img-sections" src="img/eminem.jpg" alt="Eminem" width="200" height="200">
                             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FxQTY-W6GIo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                             <figcaption>
@@ -68,10 +68,31 @@
                             </figcaption>
                         </figure>
                         <!--figure-->
-                        <figure class="figure-img">
+                        <figure class="figure-img artist">
                             <img class="img-sections" src="img/dre.jpg" alt="dr dre" width="200" height="200">
                             <figcaption>
                                 <h3>Dr. Dree</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img artist">
+                            <img class="img-sections" src="img/postM.jpg" alt="Post Malone" width="200" height="200">
+                            <figcaption>
+                                <h3>Post Malone</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img artist">
+                            <img class="img-sections" src="img/Wizk.jpg" alt="Wiz Khalifa" width="200" height="200">
+                            <figcaption>
+                                <h3>Wiz Khalifa</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img artist">
+                            <img class="img-sections" src="img/TyD.jpg" alt="Ty Dolla" width="200" height="200">
+                            <figcaption>
+                                <h3>Ty Dolla $ign</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
@@ -81,50 +102,75 @@
                 <article id="shouldwatch" class="article-shouldwatch panel">
                     <div class="container-shouldwatch">
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/got.jpeg" alt="Game of thrones" width="180" height="180">
+                            <img class="img-sections" src="img/juego-tronos-poster.jpg" alt="Game of Thrones" width="180" height="180">
                             <figcaption>
                                 <h3>Game of Thrones</h3>
                             </figcaption>
                         </figure>
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/breakingbad.jpg" alt="Breaking bad" width="180" height="180">
+                            <img class="img-sections" src="img/breakingbad.jpg" alt="Breaking Bad" width="180"
+                                height="180">
                             <figcaption>
                                 <h3>Breaking Bad</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/punisher.jpg" alt="The Punisher" width="180" height="180">
+                            <img class="img-sections" src="img/punisher.jpg" alt="The Punisher" width="180"
+                                height="180">
                             <figcaption>
                                 <h3>The Punisher</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/vikings.jpg" alt="The Punisher" width="180" height="180">
+                            <img class="img-sections" src="img/vikings.jpg" alt="Vikings" width="180" height="180">
                             <figcaption>
                                 <h3>Vikings</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/sherlock.jpg" alt="The Punisher" width="180" height="180">
+                            <img class="img-sections" src="img/sherlock.jpg" alt="Sherlock Holmes" width="180"
+                                height="180">
                             <figcaption>
                                 <h3>Sherlock Holmes</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/daredevil.jpg" alt="The Punisher" width="180" height="180">
+                            <img class="img-sections" src="img/daredevil.jpg" alt="Dare Devil" width="180"
+                                height="180">
                             <figcaption>
                                 <h3>DareDevil</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
                         <figure class="figure-img">
-                            <img class="img-sections" src="img/robot.jpg" alt="The Punisher" width="180" height="180">
+                            <img class="img-sections" src="img/robot.jpg" alt="Mr Robot" width="180" height="180">
                             <figcaption>
                                 <h3>Mr. Robot</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/rickymorty.jpg" alt="Rick y Morty" width="180" height="180">
+                            <figcaption>
+                                <h3>Mr. Robot</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/naruto.jpg" alt="Naruto Shippuden" width="180" height="180">
+                            <figcaption>
+                                <h3>Naruto Shippuden</h3>
+                            </figcaption>
+                        </figure>
+                        <!--figure-->
+                        <figure class="figure-img">
+                            <img class="img-sections" src="img/onepiece.jpg" alt="One Piece" width="180" height="180">
+                            <figcaption>
+                                <h3>One Piece</h3>
                             </figcaption>
                         </figure>
                         <!--figure-->
@@ -133,11 +179,16 @@
                 <!--article-shouldwatch-->
                 <article id="socialmedia" class="article-socialmedia panel">
                     <div class="container-socialmedia">
-                        <a href="https://www.facebook.com/SantiiRDiaz" target="_blank"><img class="link-socialmedia" src="img/facebook.png" alt="Facebook"></a>
-                        <a href="https://www.instagram.com/santi_rios.js/?hl=es-la" target="_blank"><img class="link-socialmedia" src="img/instagram.png" alt="Instagram"></a>
-                        <a href="https://twitter.com/SantiRDiaz" target="_blank"><img class="link-socialmedia" src="img/gorjeo.png" alt="twitter"></a>
-                        <a href="https://www.youtube.com/channel/UCoxnKdRPBQkIlXXbgxCRIVQ?view_as=subscriber" target="_blank"><img class="link-socialmedia" src="img/youtube.png" alt="twitter"></a>
-                        <a href="https://co.pinterest.com/santiagordlds/" target="_blank"><img class="link-socialmedia" src="img/pinterest.png" alt="twitter"></a>
+                        <a href="https://www.facebook.com/SantiiRDiaz" target="_blank"><img class="link-socialmedia"
+                                src="img/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/santi_rios.js/?hl=es-la" target="_blank"><img
+                                class="link-socialmedia" src="img/instagram.png" alt="Instagram"></a>
+                        <a href="https://twitter.com/SantiRDiaz" target="_blank"><img class="link-socialmedia"
+                                src="img/gorjeo.png" alt="twitter"></a>
+                        <a href="https://www.youtube.com/channel/UCoxnKdRPBQkIlXXbgxCRIVQ?view_as=subscriber"
+                            target="_blank"><img class="link-socialmedia" src="img/youtube.png" alt="twitter"></a>
+                        <a href="https://co.pinterest.com/santiagordlds/" target="_blank"><img class="link-socialmedia"
+                                src="img/pinterest.png" alt="twitter"></a>
                     </div>
                 </article>
                 <!--article-socialmedia-->
